dropshot/tests/fail/bad_endpoint6.stderr
error: expected identifier, found `"Oxide"`
  --> tests/fail/bad_endpoint6.rs:28:29
   |
28 |     Ok(HttpResponseOk(Ret { "Oxide".to_string(), 0x1de }))
   |                       ---   ^^^^^^^ expected identifier
   |                       |
   |                       while parsing this struct

error: expected identifier, found `0x1de`
  --> tests/fail/bad_endpoint6.rs:28:50
   |
28 |     Ok(HttpResponseOk(Ret { "Oxide".to_string(), 0x1de }))
   |                       ---                        ^^^^^ expected identifier
   |                       |
   |                       while parsing this struct

error[E0063]: missing fields `x` and `y` in initializer of `Ret`
  --> tests/fail/bad_endpoint6.rs:28:23
   |
28 |     Ok(HttpResponseOk(Ret { "Oxide".to_string(), 0x1de }))
   |                       ^^^ missing `x` and `y`

error[E0277]: the trait bound `fn(RequestContext<()>) -> impl Future<Output = Result<HttpResponseOk<Ret>, HttpError>> {<impl From<bad_endpoint> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::bad_endpoint}: dropshot::handler::HttpHandlerFunc<_, _, _>` is not satisfied
  --> tests/fail/bad_endpoint6.rs:23:10
   |
19 | / #[endpoint {
20 | |     method = GET,
21 | |     path = "/test",
22 | | }]
   | |__- required by a bound introduced by this call
23 |   async fn bad_endpoint(
   |            ^^^^^^^^^^^^ the trait `dropshot::handler::HttpHandlerFunc<_, _, _>` is not implemented for fn item `fn(RequestContext<()>) -> impl Future<Output = Result<HttpResponseOk<Ret>, HttpError>> {<impl From<bad_endpoint> for ApiEndpoint<<RequestContext<()> as RequestContextArgument>::Context>>::from::bad_endpoint}`
   |
note: required by a bound in `ApiEndpoint::<Context>::new`
  --> src/api_description.rs
   |
   |     pub fn new<HandlerType, FuncParams, ResponseType>(
   |            --- required by a bound in this associated function
...
   |         HandlerType: HttpHandlerFunc<Context, FuncParams, ResponseType>,
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `ApiEndpoint::<Context>::new`

error: cannot check whether the hidden type of opaque type satisfies auto traits
  --> tests/fail/bad_endpoint6.rs:19:1
   |
19 | / #[endpoint {
20 | |     method = GET,
21 | |     path = "/test",
22 | | }]
   | |__^
   |
note: opaque type is declared here
  --> tests/fail/bad_endpoint6.rs:25:6
   |
25 | ) -> Result<HttpResponseOk<Ret>, HttpError> {
   |      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: this item depends on auto traits of the hidden type, but may also be registering the hidden type. This is not supported right now. You can try moving the opaque type and the item that actually registers a hidden type into a new submodule
  --> tests/fail/bad_endpoint6.rs:19:1
   |
19 | / #[endpoint {
20 | |     method = GET,
21 | |     path = "/test",
22 | | }]
   | |__^
note: required by a bound in `future_endpoint_must_be_send`
  --> tests/fail/bad_endpoint6.rs:19:1
   |
19 | / #[endpoint {
20 | |     method = GET,
21 | |     path = "/test",
22 | | }]
   | |__^ required by this bound in `future_endpoint_must_be_send`
   = note: this error originates in the attribute macro `endpoint` (in Nightly builds, run with -Z macro-backtrace for more info)
